saves/test/demo_full_20240802_193545/m2014_q4a/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp m2014_q4a_tb.v m2014_q4a.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
m2014_q4a_tb.v:102: $finish called at 200000 (1ps)

iverilog cmd 2 error:

